--- a/style1.css
+++ b/style1.css
@@ -10,7 +10,7 @@ box-sizing: border-box;
     width: 90%;
 }
 .user-list{
-  
+  background: red;
  
     display: flex;
     justify-content: space-between;
@@ -155,6 +155,9 @@ thead{
     .edit-btn,
 .delete-btn{
     width: 70px;
+}
+;.user-list{
+    width: 145%;
 }
    
  }
